# scalapack

./: CMakeLists.txt
BLACS/INSTALL/: Makefile  cmake_install.cmake  xintface
BLACS/SRC/: CMakeLists.txt
CMAKE/: ExternalBLISLAPACK.cmake  ExternalOpenBLAS.cmake
PBLAS/: CMakeLists.txt
REDIST/: CMakeLists.txt
REDIST/SRC/: CMakeLists.txt
SRC/: .pdhseqr.f.swp  CMakeLists.txt  bdlaexc.f  bslaexc.f  cdotc2.f  cdotu2.f  cladiv2.f  clange2.f  clanv2.f  ddot2.f  dlange2.f  dlarrv2.f  dnrm22.f  dstein2.f  dznrm22.f  pcdttrf.f  pcdttrs.f  pcdttrsv.f  pchetd2.f  pchettrd.f  pclarfg.f  pclattrs.f  pclauu2.f  pcpotf2.f  pddttrf.f  pdlaed3.f  pdlaqr5.f  pdlauu2.f  pdpotf2.f  pdsytd2.f  pdsyttrd.f  psdttrf.f  pslaed3.f  pslaqr5.f  pslauu2.f  pspotf2.f  pssytd2.f  pssyttrd.f  pzdttrf.f  pzdttrs.f  (+18 more)
TESTING/EIG/: pdsvdcmp.f  pssvdcmp.f
TOOLS/: CMakeLists.txt
TOOLS/LAPACK/: CMakeLists.txt
